--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -10,7 +10,7 @@
 	margin-bottom: 4rem !important;
 
 	@include respond(tab-port) {
-		margin-bottom: 3rem !important;
+		margin-bottom: 2.5rem !important;
 	}
 }
 
@@ -23,8 +23,16 @@
 
 .u-margin-top-big {
 	margin-top: 8rem !important;
+
+	@include respond(tab-port) {
+		margin-top: 5rem !important;
+	}
 }
 
 .u-margin-top-huge {
 	margin-top: 10rem !important;
+
+	@include respond(tab-port) {
+		margin-top: 7rem !important;
+	}
 }
