--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -8,7 +8,6 @@
 
 	&__side {
 		height: 52rem;
-		-webkit-transition: all 0.8s ease;
 		transition: all 0.8s ease;
 		position: absolute; /* took them out of natural flow so the card(parent) collapsed - has no height - nothing we can do except to specify the same height for parent */
 		top: 0;
@@ -25,7 +24,6 @@
 		}
 
 		&--back {
-			-webkit-transform: rotateY(180deg);
 			transform: rotateY(180deg);
 
 			&-1 {
@@ -41,12 +39,10 @@
 	}
 
 	&:hover &__side--front {
-		-webkit-transform: rotateY(-180deg);
 		transform: rotateY(-180deg);
 	}
 
 	&:hover &__side--back {
-		-webkit-transform: rotateY(0deg);
 		transform: rotateY(0deg);
 	}
 	// .card:hover .card__side {
@@ -139,7 +135,6 @@
 
 	/* call to action */
 	&__cta {
-		position: absolute;
 		@include center-horizontal-vertical;
 		width: 90%;
 		text-align: center;
@@ -159,5 +154,54 @@
 	&__price-value {
 		font-size: 6rem;
 		font-weight: 100;
+	}
+
+	//////////////////////
+	// MEDIA QUERY
+	//////////////////////
+
+	@include respond(tab-port) {
+		height: auto;
+		background-color: $color-white;
+		box-shadow: $shadow-card;
+
+		&__side {
+			height: auto;
+			position: relative;
+			box-shadow: none;
+
+			&--back {
+				transform: rotateY(0);
+				clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+			}
+		}
+
+		&:hover &__side--front {
+			transform: rotateY(0);
+		}
+
+		&__details {
+			padding: 1rem;
+		}
+
+		// BACK SIDE STYLING
+
+		/* call to action */
+		&__cta {
+			position: relative;
+			top: 0;
+			left: 0;
+			transform: translate(0);
+			width: 100%;
+			padding: 6rem 4rem 4rem;
+		}
+
+		&__price-box {
+			margin-bottom: 3rem;
+		}
+
+		&__price-value {
+			font-size: 4.5rem;
+		}
 	}
 }
