--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,6 +1,10 @@
 .form {
 	&__group:not(:last-child) {
 		margin-bottom: 2rem;
+
+		@include respond(tab-port) {
+			margin-bottom: 1.5rem;
+		}
 	}
 
 	&__input {
@@ -15,6 +19,10 @@
 		width: 90%;
 		display: block;
 		transition: all 0.3s;
+
+		@include respond(tab-port) {
+			width: 100%;
+		}
 
 		&:focus {
 			outline: none;
@@ -49,11 +57,16 @@
 	&__radio-group {
 		width: 49%;
 		display: inline-block;
-    }
-    
-    &__radio-input {
-        display: none;
-    }
+
+		@include respond(tab-port) {
+			width: 100%;
+			margin-bottom: 2rem;
+		}
+	}
+
+	&__radio-input {
+		display: none;
+	}
 
 	&__radio-label {
 		font-size: $default-font-size;
@@ -84,19 +97,16 @@
 			display: block;
 			border-radius: 50%;
 			background-color: $color-primary;
-            opacity: 0;
-            transition: opacity .2s;
+			opacity: 0;
+			transition: opacity 0.2s;
 		}
 	}
 
 	&__radio-input:checked ~ &__radio-label &__radio-button:after {
-        opacity: 1;
+		opacity: 1;
 	}
-	
+
 	.heading-secondary {
 		padding: 0;
 	}
-
-
-    
 }
