--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -13,7 +13,17 @@
 	//wont work bcs the shape will be overritten by its own transform property
 	/*  & > * {
 	transform: skewX(12deg);
-    } */
+	} */
+
+	@include respond(tab-port) {
+		width: 100%;
+		padding: 4rem;
+		padding-left: 7rem;
+	}
+
+	@include respond(phone) {
+		transform: skewX(0);
+	}
 
 	&__shape {
 		width: 15rem;
@@ -22,6 +32,11 @@
 		shape-outside: circle(50% at 50% 50%);
 		clip-path: circle(50% at 50% 50%);
 		transform: translateX(-3rem) skewX(12deg);
+		margin-bottom: 0.5rem;
+
+		@include respond(phone) {
+			transform: translate(-2rem) skewX(0);
+		}
 	}
 
 	&__img {
@@ -32,6 +47,10 @@
 
 	&__text {
 		transform: skewX(12deg);
+
+		@include respond(phone) {
+			transform: skewX(0);
+		}
 	}
 
 	&__caption {
@@ -42,8 +61,6 @@
 		text-align: center;
 		opacity: 0;
 		transition: all 0.5s;
-		////-webkit-backface-visibility: hidden;
-		////-moz-backface-visibility: hidden;
 		backface-visibility: hidden;
 	}
 
