--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,7 +2,7 @@
 	max-width: $grid-width; /* 1140px */
 	margin: 0 auto;
 	padding-left: 2rem;
-	padding-left: 2rem;
+	padding-right: 2rem;
 
 
 	&:not(:last-child) {
