--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,33 +1,55 @@
 .header {
-	height: 95vh;
-	background-image: -webkit-gradient(
-			linear,
-			left top,
-			right bottom,
-			from(rgba($color-primary-light, 0.8)),
-			to(rgba($color-primary-dark, 0.8))
-		),
-		url(../img/hero.jpg);
+	height: 85vh;
 	background-image: linear-gradient(
 			to right bottom,
 			rgba($color-primary-light, 0.8),
 			rgba($color-primary-dark, 0.8)
 		),
-		url(../img/hero.jpg);
+		url(../img/hero-small.jpg);
 	background-size: cover;
 	background-position: top; /* image top stays but bottom gets cropped when resizing */
 	background-attachment: fixed;
 	position: relative;
-	-webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+	@supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+		height: 95vh;
+	}
+
+	/* 
+	displays higher quality image if device has high dpi resolution except if its on small screen (<600px) because the lower res image will still be big enough for smaller screen with high dpi)
+	or
+	displays higher quality image if device has screen width bigger than 2000px, no matter its resolution/dpi 
+	added --webkit for Safari
+	*/
+	@media (min-resolution: 192dpi) and (min-width: 37.5em),
+		(-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+		(min-width: 125em) {
+		background-image: linear-gradient(
+				to right bottom,
+				rgba($color-primary-light, 0.8),
+				rgba($color-primary-dark, 0.8)
+			),
+			url(../img/hero.jpg);
+	}
+
+	/* @include respond(big-desktop) {
+		background-image: linear-gradient(
+				to right bottom,
+				rgba($color-tertiary-light, 0.8),
+				rgba($color-tertiary-dark, 0.8)
+			),
+			url(../img/hero.jpg);
+	} */
 
 	@include respond(tab-port) {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
-	clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
 	}
 	@include respond(phone) {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-	clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
 	}
 
 	&__logo-box {
