--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -58,17 +58,20 @@ body {
 	letter-spacing: 0.2rem;
 	padding-left: 3.5rem;
 	padding-right: 3.5rem;
-
-	background-image: linear-gradient(
-		to right,
-		$color-primary-light,
-		$color-primary-dark
-	);
 	border-image: linear;
-	background-clip: text;
-	-webkit-background-clip: text;
-	color: transparent;
+	color: $color-primary; /* for the browsers that dont support background-clip: text; */
 	transition: all 0.2s;
+
+	@supports (background-clip: text) or (-webkit-background-clip: text) {
+		background-image: linear-gradient(
+			to right,
+			$color-primary-light,
+			$color-primary-dark
+		);
+		background-clip: text;
+		-webkit-background-clip: text;
+		color: transparent;
+	}
 
 	@include respond(tab-port) {
 		font-size: 3.2rem;
