--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,14 @@
 	visibility: hidden; /* also disables the functionality */
 	transition: all 0.3s;
 
+	/* we check if the whole property is supported and add condition based on it */
+	@supports (-webkit-backdrop-filter: blur(10px)) or
+		(backdrop-filter: blur(10px)) {
+		-webkit-backdrop-filter: blur(10px);
+		backdrop-filter: blur(10px);
+		background-color: rgba($color-black, 0.3);
+	}
+
 	&__content {
 		@include center-horizontal-vertical;
 		width: 75%;
