--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -37,26 +37,26 @@ doesn't work with rems
 @mixin respond($breakpoint) {
 	@if $breakpoint == phone {
 		/* 600px / 16px = 37.5em */
-		@media (max-width: 37.5em) {
+		@media only screen and (max-width: 37.5em) {
 			//600px
 			@content;
 		}
 	}
 	@if $breakpoint == tab-port {
-		@media (max-width: 56.25em) {
+		@media only screen and (max-width: 56.25em) {
 			//900px
 			@content;
 		}
 	}
 	@if $breakpoint == tab-land {
-		@media (max-width: 75em) {
+		@media only screen and (max-width: 75em) {
 			//1200px
 			@content;
 		}
 	}
 	@if $breakpoint == big-desktop {
 		//2000px
-		@media (min-width: 125em) {
+		@media only screen and (min-width: 125em) {
 			@content;
 		}
 	}
